src/style/main.less
@import url(http://fonts.googleapis.com/css?family=Raleway:400,600,800);

@font-family-sans-serif: 'Raleway', sans-serif;
@font-size-base: 18px;
@brand-primary: #5F0013;
@navbar-border-radius: 0px;
@navbar-default-bg: white;
@navbar-default-brand-color: @gray-dark;
@navbar-default-link-color: @brand-primary;
@code-color: @brand-primary;
@code-bg: @gray-lighter;

b {
    font-weight: 600;
}

body {
    padding-top: @navbar-height;
}

.center-vertical {
    top: 50%;
    transform: translateY(-50%);
}

.animated {
    animation-fill-mode: both;
    animation-duration: 1000ms;
}

@keyframes fadeInDown {
    0% {
        opacity: 0;
        transform: translateY(-100%);
    }

    100% {
        opacity: 1;
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes fadeInUp {
    0% {
        opacity: 0;
        transform: translateY(100%);
    }

    100% {
        opacity: 1;
    }
}

.fadeIn {
    animation-name: fadeIn;
}

.fadeInDown {
    animation-name: fadeInDown;
}

.fadeInUp {
    animation-name: fadeInUp;
}

.hack {
    color: @gray-darker;
    font-weight: 600;
}

.mann {
    color: @brand-primary;
    font-weight: 800;
}

.scroll-anchor {
    position: relative;
    top: -@navbar-height;
}

#header {
    height: 90vh;
}

#header-logo {
    margin-top: 0;
    margin-bottom: 0;
}

#header-logo-text {
    position: relative;
    overflow: hidden;
    font-size: 25px;
    @media (min-width: @screen-sm-min) {
        font-size: 50px;
        white-space: nowrap;
    }
    @media (min-width: @screen-md-min) {
        font-size: 75px;
    }
    @media (min-width: @screen-lg-min) {
        font-size: 100px;
    }
}

@keyframes headerTextAppear {
    0% {
        width: 0;
        left: 50%;
        right: 50%;
    }

    100% {
        width: 100%;
        left: 0;
        right: 0;
    }
}

.headerTextAppear {
    animation-name: headerTextAppear;
    animation-duration: 450ms;
    animation-delay: 550ms;
}

.chevron {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
}

.chevron img {
    display: block;
    height: 100%;
    width: auto;
}

.chevron-left {
    left: 0;
}

.chevron-right {
    right: 0;
}

@keyframes chevronLeftSlide {
    0% {
        transform: translateX(50%);
    }

    100% {
        transform: translateX(0);
    }
}

@keyframes chevronRightSlide {
    0% {
        transform: translateX(-50%) scaleX(-1);
    }

    100% {
        transform: translateX(0) scaleX(-1);
    }
}

.chevronSlide() {
    animation-delay: 500ms;
    animation-duration: 500ms;
}

.chevronLeftSlide {
    .chevronSlide();
    animation-name: chevronLeftSlide;
}

.chevronRightSlide {
    .chevronSlide();
    animation-name: chevronRightSlide;
}

